fix: spacing between frame and text and image

--- a/src/components/landpage/blackboard/styles.module.scss
+++ b/src/components/landpage/blackboard/styles.module.scss
@@ -3,8 +3,8 @@
   background-color: #38444c;
 
   h2 {
-    margin: 90px 0;
     color: #fff;
+    margin: 30px 0 100px 0;
     text-align: center;
     text-shadow: 0px 5px 2px rgba(0, 0, 0, .3);
     font-family: 'UpheavalPro';
